@@ -1,6 +1,12 @@
 2007-09-17  Inge Wallin  <inge@lysator.liu.se>
 
 	More work on APIDOX: 
+	* src/lib/MarbleWidget.cpp: Fix errors with parameters.
+	* src/lib/MarbleWidget.h,
+	* src/lib/MarbleControlBox.h,
+	* src/lib/MarbleNavigator.h: Much more APIDOX
+	
+	More work on APIDOX: 
 	* src/lib/MarbleNavigator.h: Fix apidox and remove warnings
 	* src/lib/MarbleNavigator.cpp (MarbleNavigator): Fix indentation
 
